:art: https://github.com/siyuan-note/siyuan/issues/5066 tab

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,10 @@
-:root {
-    --b3-theme-primary: #d23f31;
+.plugin-sample {
+  &__custom-tab {
+    background-color: var(--b3-theme-background);
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
