--- a/src/index.scss
+++ b/src/index.scss
@@ -7,4 +7,10 @@
     justify-content: center;
     align-items: center;
   }
+
+  &__custom-dock {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
